--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p>Если ты тренер по любому виду спорта, которым можно заниматься в парке или на спортплощадке, и хочешь организовать собственные групповые тренировки, приглашаем к участию в проекте.</p>
       <p>Как это сделать?</p>
       <p>1. Определись с условиями: тип тренировок (бег, офп, йога, ...), требуемый уровень подготовки, точное место проведения, расписание, стоимость, дата начала;</p>
-      <p>2. Присылай все это на почту mail@fizra.ru (можно написать на Facebook или Вконтакте) вместе с кратким резюме в свободной форме (спортивный и тренерский опыт, достижения, образование, ...);</p>
+      <p>2. Присылай все это нам сообщением в соцсетях вместе с кратким резюме в свободной форме (спортивный и тренерский опыт, достижения, образование, ...);</p>
       <p>3. Все! Мы ставим на карте маркер с информацией о твоих тренировках, пишем о тебе в соцсетях, можешь выходить и тренировать людей!</p>
       <p>Все это бесплатно, но с определенными требованиями: тренировки должны быть строго регулярными, и ты должен нам сообщать количество участников каждой тренировки для сбора статистики.</p>
       <p>Экспериментальная площадка проекта - парки района Останкино, но вообще, никаких географических рамок у проекта нет.</p>
@@ -109,7 +109,7 @@ var placeIcon = L.Icon.extend({
 var pointIcon = new placeIcon();
 
 L.marker([55.82484, 37.61696], {icon: myIcon}).addTo(mymap).bindPopup(
-  "<b>Иван Иванов</b><br>Бег и ОФП<br>Среда - 7:30<br>Суббота - 11:00"
+  "<b>Анастасия Ростовцева</b><br>Бег и ОФП<br>Понедельник - 19:30<br>Среда - 7:30<br>Уровень подготовки - новички<br>Стоимость - 300р"
 );
 
 L.marker([55.829314, 37.627696], {icon: theirIcon}).addTo(mymap).bindPopup(
