--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Fizkultura</title>
+  <title>Физкультура</title>
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.16.0/mapbox-gl.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.16.0/mapbox-gl.css' rel='stylesheet' />
   <link rel="stylesheet" type="text/css" href="160407_fizra-style.css"/>
@@ -40,6 +40,7 @@
       <p>Практически всем жителям современного большого города необходимо регулярно упражняться для поддержания здоровья и хорошей физической формы. Лучше всего это делать на свежем воздухе в близлежащем парке, в хорошей компании и под руководством опытного тренера.</p>
       <p>Любой парк - это фитнес-центр. Здесь есть «аналоговые беговые дорожки», тренажеры (турники, брусья), травяные «коврики» для йоги. Не хватает только расписания групповых тренировок с инструкторами. Этому и посвящен проект. На карте вы можете найти информацию о возможностях для тренировок в парке (пока только района Останкино), кликайте маркеры.</p>
       <p>Тренеры и инструкторы, выходите в ближайший к вам парк, предлагайте свои услуги. Нам всем не хватает уроков физкультуры. Зайдите в раздел «Ищем тренеров» и узнайте, как проект поможет вам найти подопечных.</p>
+      <p class=end>mail@fiz-ra.org</p>
       <p class=end>Автор проекта –<a href="https://www.facebook.com/yuri.nazarov.50" target="_blank">Юрий Назаров</a></p>
   </div>
   <div id=coachtext>
@@ -48,7 +49,7 @@
       <p>Если ты тренер по любому виду спорта, которым можно заниматься в парке или на спортплощадке, и хочешь организовать собственные групповые тренировки, приглашаем к участию в проекте.</p>
       <p>Как это сделать?</p>
       <p>1. Определись с условиями: тип тренировок (бег, офп, йога, ...), требуемый уровень подготовки, точное место проведения, расписание, стоимость, дата начала;</p>
-      <p>2. Присылай все это нам сообщением в соцсетях вместе с кратким резюме в свободной форме (спортивный и тренерский опыт, достижения, образование, ...);</p>
+      <p>2. Присылай все это нам на почту mail@fiz-ra.org или сообщением в соцсетях вместе с кратким резюме в свободной форме (спортивный и тренерский опыт, достижения, образование, ...);</p>
       <p>3. Все! Мы ставим на карте маркер с информацией о твоих тренировках, пишем о тебе в соцсетях, можешь выходить и тренировать людей!</p>
       <p>Все это бесплатно, но с определенными требованиями: тренировки должны быть строго регулярными, и ты должен нам сообщать количество участников каждой тренировки для сбора статистики.</p>
       <p>Экспериментальная площадка проекта - парки района Останкино, но вообще, никаких географических рамок у проекта нет.</p>
