--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       </ul>
       </div>
       <div id=social>
-        <a href="https://www.facebook.com/fizkulturaostankino/" target="_blank" title="страница на facebook">
+        <a class=social href="https://www.facebook.com/fizkulturaostankino/" target="_blank" title="страница на facebook">
           <img src="F_logo_24.svg"/>
         </a>
-        <a href="https://vk.com/fizkulturaostankino" target="_blank" title="страница во Вконтакте">
+        <a class=social href="https://vk.com/fizkulturaostankino" target="_blank" title="страница во Вконтакте">
           <img src="B_logo_24.svg"/>
         </a>
       </div>
